WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
110674
Do one lookup per code cache insertion instead of two
https://bugs.webkit.org/show_bug.cgi?id=110674
Summary
Do one lookup per code cache insertion instead of two
Geoffrey Garen
Reported
2013-02-22 18:08:45 PST
Do one lookup per code cache insertion instead of two
Attachments
Patch
(9.43 KB, patch)
2013-02-22 18:11 PST
,
Geoffrey Garen
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2013-02-22 18:11:43 PST
Created
attachment 189886
[details]
Patch
Geoffrey Garen
Comment 2
2013-02-25 10:58:23 PST
Committed
r143949
: <
http://trac.webkit.org/changeset/143949
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug